--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,10 +12,13 @@
       "@testing-library/user-event": "^12.1.10",
       "framer-motion": "4",
       "react": "^17.0.2",
+      "react-barcode": "^1.4.0",
       "react-dom": "^17.0.2",
       "react-icons": "^4.2.0",
+      "react-qr-code": "^1.1.1",
       "react-router-dom": "^5.2.0",
       "react-scripts": "4.0.3",
+      "react-to-print": "^2.12.4",
       "web-vitals": "^1.0.1"
    },
    "scripts": {
