--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
       "react-barcode": "^1.4.0",
       "react-dom": "^17.0.2",
       "react-icons": "^4.2.0",
+      "react-lazy-load-image-component": "^1.5.1",
       "react-qr-code": "^1.1.1",
       "react-router-dom": "^5.2.0",
       "react-scripts": "4.0.3",
